[gd_scene load_steps=2 format=2]

[ext_resource path="res://codigo_corrigido.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 132.0
margin_top = 103.0
margin_right = 287.0
margin_bottom = 177.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 133.0
margin_top = 274.0
margin_right = 288.0
margin_bottom = 348.0

[node name="Button" type="Button" parent="."]
margin_left = 117.0
margin_top = 418.0
margin_right = 308.0
margin_bottom = 515.0
text = "COLETAR DADOS"

[node name="Button2" type="Button" parent="."]
margin_left = 422.0
margin_top = 137.0
margin_right = 613.0
margin_bottom = 234.0
text = "MOSTRAR LISTA"

[node name="Button3" type="Button" parent="."]
margin_left = 422.0
margin_top = 358.0
margin_right = 613.0
margin_bottom = 455.0
text = "MOSTRAR NOME"

[node name="Label" type="Label" parent="."]
margin_left = 165.0
margin_top = 75.0
margin_right = 255.0
margin_bottom = 89.0
text = "INSIRA NOME"

[node name="Label2" type="Label" parent="."]
margin_left = 159.0
margin_top = 244.0
margin_right = 265.0
margin_bottom = 258.0
text = "INSIRA NÃšMERO"

[node name="Label3" type="Label" parent="."]
margin_left = 667.0
margin_top = 119.0
margin_right = 899.0
margin_bottom = 256.0

[node name="Label4" type="Label" parent="."]
margin_left = 679.0
margin_top = 324.0
margin_right = 910.0
margin_bottom = 477.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
